# TUe--Eindhoven-Improving-statistical-inferences

./: README.md  data-processing-idbm.ipynb  main.py  pyproject.toml
data/processed/: filter_movie_title_identifier.csv  filtered_movie_rating.csv  final_filtered_salman_and_shahruk_movies_pdf.csv  require_actor_name_identifier.csv  salman_khan_movies.csv  shahrukh_khan_movies.csv  title_and_actor_identifier.csv
