[project]
name = "tue-eindhoven-improving-statistical-inferences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.5.1",
    "indexed-gzip>=1.9.4",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
]
